renamed name of some classes and make  project can call api from project.

--- a/WebClient/Pages/Shared/Index.cshtml
+++ b/WebClient/Pages/Shared/Index.cshtml
@@ -2,10 +2,11 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <h1>Integrate with Wired Brain Coffee</h1>
-        <p>Track your Wired Brain Coffee rewards account from within Unground!</p>
+        <h1>Integrate with Weather ForeCast</h1>
+        <p>Track your data:</p>
         <a class="btn btn-primary" asp-action="Authorize">Authorize</a>
         <a class="btn btn-primary" asp-action="GetWeatherForecast">Get Weather Forecase from API</a>
+        <br/>
         <h3>Output</h3>
         <pre>@Model</pre>
     </div>
