--- a/AuthorizationServer/Pages/Login.cshtml
+++ b/AuthorizationServer/Pages/Login.cshtml
@@ -1,14 +1,15 @@
-@*@model LoginViewModel
+@model AuthorizationServer.Account.LoginViewModel
+
 <div class="row">
     <div class="col-sm-offset-3 col-sm-6">
-        <img src="~/logo.png" class="img-responsive center-block" alt="Wired Brain Coffee Logo" />
+        <img src="~/rocket-logo.jpg" class="img-responsive center-block" alt="Wired Brain Coffee Logo" />
     </div>
 </div>
 <div class="row">
     <div class="col-sm-offset-3 col-sm-6">
         <h1 class="text-center">Login</h1>
         <form asp-route="Login">
-            @Html.Partial("_ValidationSummary")
+            @* @Html.Partial("_ValidationSummary") *@
             <input type="hidden" asp-for="ReturnUrl" />
             <fieldset>
                 <div class="form-group">
@@ -38,4 +39,4 @@
             }
         </ul>
     </div>
-</div>*@
+</div>
