fixed to make it bound to authorizationServer

--- a/AuthorizationServer/Views/Account/Login.cshtml
+++ b/AuthorizationServer/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-sm-offset-3 col-sm-6">
-        <img src="~/rocket-logo.jpg" class="img-responsive center-block" alt="Wired Brain Coffee Logo" />
+        <img src="~/rocket-logo.jpg" class="img-responsive center-block" alt="Wired Brain Coffee Logo" width="200" />
     </div>
 </div>
 <div class="row">
