--- a/WebClient/Pages/Shared/Index.cshtml
+++ b/WebClient/Pages/Shared/Index.cshtml
@@ -8,6 +8,10 @@
         <a class="btn btn-primary" asp-action="GetWeatherForecast">Get Weather Forecase from API</a>
         <br/>
         <h3>Output</h3>
-        <pre>@Model</pre>
+        <div class="card" style="background: #f7f7f7">
+          <div class="card-body">
+            <pre><code>@Model</code></pre>
+          </div>
+        </div>
     </div>
 </div>
