--- a/AuthorizationServer/Pages/Shared/_Layout.cshtml
+++ b/AuthorizationServer/Pages/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
+            <img src="~/rocket-logo.jpg" class="img-responsive center-block" alt="Rocket SSO" width="30"/>
             <a class="navbar-brand" asp-area="" asp-page="/Index">AuthorizationServer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
