--- a/AuthorizationServer/Pages/Shared/Login.cshtml
+++ b/AuthorizationServer/Pages/Shared/Login.cshtml
@@ -24,7 +24,7 @@
         }
         <br/>
         <h4>Request Details</h4>
-        <div class="card" style="background: #f7f7f7">
+        <div class="card">
             <div class="card-body">
                 @if (Model.Parameters != null)
                 {
